Add id updates for removed cards